      may need to be added to the firewall rules
  * UpdateManager/Core/utils.py:
    - add iptables_active() helper
  * merged lp:~brian-murray/update-manager/has-completed, many thanks
    This fixes issues with the English past tense
  * merged lp:~mvo/update-manager/use-screen-in-text-frontend, this
    will use screen in the text version of the release upgrader

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Nov 2010 18:06:56 +0100

update-manager (1:0.145.4) natty; urgency=low

  * DistUpgrade/*.ui:
    - updated window main heading for 11.04
  * merged lp:~brian-murray/update-manager/upgrade-canceled-wording
    with wording and style fixes, many thanks!
  * DistUpgrade/DistUpgradeCache.py, UpdateManager/Core/utils.py:
    - check if running inside a chroot and if so, skip kernel
      selection
  * UpdateManager/Core/MetaRelease.py:
    - improve error checking and only present upgrade button if there
      is a working network
    - cleanup hardy code

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Nov 2010 16:59:29 +0100

update-manager (1:0.145.3) natty; urgency=low

  * do-release-upgrade:
    - output if the current release is no longer supported
      (part of other-ps-n-testing-upgrades-for-preinstall-hw)
  * check-new-release-gtk:
    - show "dist-no-longer-supported" dialog if the current 
      release is no longer supported
    - automatically "unignore" a previously ignored upgrade if
      the current release becomes EOL
  * AutoUpgradeTester/profile/*/DistUpgrade.cfg:
    - update to auto test maverick to natty
  * DistUpgrade/DistUpgrade.cfg:
    - update kernel removal for natty too

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 17 Nov 2010 17:40:09 +0100

update-manager (1:0.145.2) natty; urgency=low

  [ Barry Warsaw ]
  * Add required details to .emit() call.  (LP: #631328)
  
  [ Michael Vogt ]
  * debian/control:
    - add or-dependency for python-aptdaemon-gtk and drop gksu 