@@ -12,6 +12,8 @@ update-manager (1:0.145.5) UNRELEASED; urgency=low
     This fixes issues with the English past tense
   * merged lp:~mvo/update-manager/use-screen-in-text-frontend, this
     will use screen in the text version of the release upgrader
+  * Janitor/plugins/dpkg_status_plugin.py, DistUpgrade/DistUpgradeViewGtk.py:
+    - fix python-apt 0.8 API
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 26 Nov 2010 18:06:56 +0100
 
